--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "repository": "https://github.com/HidakaRintaro/mv-labels",
   "author": "HidakaRintaro <53255166+HidakaRintaro@users.noreply.github.com>",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,6 +15,8 @@
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.3.3",
+    "aws-amplify": "^5.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
