--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.42.1",
     "@vitejs/plugin-react": "^2.2.0",
@@ -43,7 +45,6 @@
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "react-helmet": "^6.1.0",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.8",
     "vite": "^3.2.3"
