--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -33,6 +33,7 @@ rules:
   import/prefer-default-export: off
   '@typescript-eslint/restrict-template-expressions': off
   '@typescript-eslint/explicit-function-return-type': warn # 一旦はwarnにして解決方法が分かったら対応
+  '@typescript-eslint/no-confusing-void-expression': off
   react/function-component-definition:
     [
       2,
